force-app/main/default/objects/Account/fields/BlockReason__c.field-meta.xml
<CustomField>
    <fullName>BlockReason__c</fullName>
    <label>Motivo do bloqueio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountBlockReason</valueSetName>
    </valueSet>
</CustomField>