force-app/main/default/objects/Account/fields/ContratoPessoa__c.field-meta.xml
<CustomField>
    <fullName>ContratoPessoa__c</fullName>
    <label>ID Contrato Pessoa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>