force-app/main/default/objects/Account/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <label>ID do cliente</label>
    <length>254</length>
    <type>Text</type>
</CustomField>