force-app/main/default/objects/Account/fields/ExternalDomain__c.field-meta.xml
<CustomField>
    <fullName>ExternalDomain__c</fullName>
    <label>Domínio Externo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExternalDomains</valueSetName>
    </valueSet>
</CustomField>