force-app/main/default/objects/Account/fields/is_pp_multi__c.field-meta.xml
<CustomField>
    <fullName>is_pp_multi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-locatário</label>
    <type>Checkbox</type>
</CustomField>