force-app/main/default/objects/Account/fields/IsAnonymized__c.field-meta.xml
<CustomField>
    <fullName>IsAnonymized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is anonymized?</label>
    <type>Checkbox</type>
</CustomField>