force-app/main/default/objects/Account/fields/IsBlocked__c.field-meta.xml
<CustomField>
    <fullName>IsBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conta Bloqueada?</label>
    <type>Checkbox</type>
</CustomField>