force-app/main/default/objects/Account/fields/MainId__c.field-meta.xml
<CustomField>
    <fullName>MainId__c</fullName>
    <externalId>true</externalId>
    <label>Id da Main</label>
    <length>255</length>
    <type>Text</type>
</CustomField>