force-app/main/default/objects/Account/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Tipo de Pessoa</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountPersona</valueSetName>
    </valueSet>
</CustomField>