force-app/main/default/objects/Account/fields/PersonId__c.field-meta.xml
<CustomField>
    <fullName>PersonId__c</fullName>
    <label>ID da Person</label>
    <type>TextArea</type>
</CustomField>