force-app/main/default/objects/Account/fields/pp_multi_classification__c.field-meta.xml
<CustomField>
    <fullName>pp_multi_classification__c</fullName>
    <label>pp_multi_classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>active</fullName>
            </value>
            <value>
                <fullName>potential</fullName>
            </value>
            <value>
                <fullName>lifetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>