force-app/main/default/objects/Account/fields/TestUser__c.field-meta.xml
<CustomField>
    <fullName>TestUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usuário de Teste</label>
    <type>Checkbox</type>
</CustomField>